This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
11/22/20: Fixed SnapshotToFile command with first value 0 (In 3.8).

11/22/20: Made it possible to pick Navigator points on an overlay made from
two imported maps (In 3.8).

11/21/20: Fixed crash adding float image to tilt series mini-stack (In 3.8).

11/21/20: Fixed divide by 0 crash when using "Test Acquire" in beam
autocenter (In 3.8).

11/16/20: Made Settings - Set a Property show the current value and print the
new value to the log (In 3.8).

11/14/20: Added ability to define a set of lens changes for normalizing lenses
on a JEOL.

11/14/20: Added Navigator option (in Options menu) to incorporate the label
into names of files to be opened instead of adding sequential numbers when
new names are generated automatically.

11/12/20: Added property to add some text after "SerialEM" in the title bar.

11/12/20: Added hot keys to toggle "Extra info" and crosshairs in the
display.

11/12/20: Added ability to select scripts to run at program startup and exit.

11/12/20: SEM_3-8-4
11/12/20: Fixed installer to copy SEMCCD-GMS3.01-64.dll for GMS 3.0 - 3.2
(In 3.8).

11/12/20: Set the default for LowestGainIndex to 2 for XF416 (In 3.8).

11/11/20: Added script commands to add, subtract, multiply and divide two images
and to scale the values in an image; changed FilterImage to place the output
in A or in a specified buffer.

11/11/20: Made it possible to use an autofocus calibration in LM.

11/10/20: Added script command to set tilt axis offset.

11/10/20: Added capability to define dialog and menu items to hide or disable
unconditionally and also to define a selectable "basic mode" with a list of
items to hide or disable.

11/10/20: Made it possible to set Administrator mode to -1 to prevent people
from saving calibrations.
