@@ -4064,6 +4064,12 @@
               Set Minimum Counts</A> in the Camera menu. This action may unstick a stuck 
             lower shutter.</TD>
         </TR>
+        <TR VALIGN="top">
+          <TD>NoScopeControlOnStartup</TD>
+          <TD>Set to 1 to keep the Scope Control panel closed on program startup, which 
+            works around a bug in JEOL software that stops the beam from turning on when 
+            this panel is open and the state of the beam is being accessed.</TD>
+        </TR>
       </TABLE>
       <BR>
       <P><A NAME="hitachi_properties"></A><B>Hitachi properties</B></P>
